1999-04-10  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* depcomp: New file.
	* Makefile.am (dist_script_DATA): Added depcomp.
	* automake.in (cmdline_use_dependencies, omit_dependencies,
	dependency_macros): Removed.
	(--ignore-deps): Just ignore.
	(handle_single_transform_list, dep_files): Named dependency files
	as \$(DEPDIR)/$base.P$obj
	(handle_lib_objects_cond): Likewise.
	(generate_dependency_code): Do not check for AM_*_DEPENDENCIES.
	(scan_one_configure_file): Likewise.
	(handle_dependencies): Always enable auto-dep.  Define `depcomp'.
	Ignore OMIT_DEPENDENCIES.
	(handle_configure): Do not pass --ignore-deps.
	(scan_configure): Require `depcomp'.
	(initialize_global_constants): Make `depcomp' common.  Remove
	`--ignore-deps' from usage.
	(get_object_extension): No more NOTDEPEND in compile nor libtool.
	* compile.am: Remove rules for .c.o and .c.obj
	* depend.am (distclean-depend): Wipe out $(DEPDIR)
	* depend2.am (@FPFX@DEPMODE): Define from config.status.
	Use it and depcomp in suffix rules.
	* libtool.m4: Likewise.
	* m4/ccdepend.m4, m4/cxxdepend.m4: Removed.
	* m4/depvars.m4, m4/objcdepend.m4: Likewise.
	* m4/Makefile.am (dist_m4data_DATA): Likewise.
	* m4/depout.m4 (AM_OUTPUT_DEPENDENCY_COMMANDS): Extract DEPDIR
	from the Makefile and subst it in deps.  Report creation of deps
	files (for now).  Replace $U with `_' and the empty string.  Write 
	a comment to each created file. 
	* m4/depend.m4 (AM_SET_DEPDIR): Select a valid deps dir name.
	(AM_DEPENDENCIES): Accept CC, CXX and OBJC.  Just determine the
	dependency mode and AC_SUBST [$1]DEPMODE.
	* m4/init.m4 (AM_INIT_AUTOMAKE): Automatically call
	AM_DEPENDENCIES for CC and CXX, if the corresponding AC_PROG
	appears in configure.in, before or after AM_INIT_AUTOMAKE.

1999-04-02  Raja R Harinath  <harinath@cs.umn.edu>

	* depout.m4: Fix sed expression for extracting `dirpart'.

1999-03-29  Tom Tromey  <tromey@cygnus.com>

	* depend2.am (DEP_@FPFX@COMPILE): Use `!=' and not `-ne'.
