@@ -1,3 +1,14 @@
+1999-04-12  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* automake.in (cmdline_use_dependencies): Reintroduce it.
+	(--ignore-deps): Set cmdline_use_dependencies again.
+	(handle_dependencies): If use_dependencies is not set, define
+	depcomp as empty.
+	(handle_configure): Pass --ignore-deps to generated Makefile.ins.
+	(scan_configure): Do not require depcomp when ignoring
+	dependencies.
+	(initialize_global_constants): Reintroduce --ignore-deps.
+
 1999-04-10  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* depcomp: New file.
